test/corpus/child.txt
===========
Basic child
===========

Box {
  Box {
  }
}

---

(source_file
  (object
    name: (type_name
      name: (ident))
    content: (object_content
      (object
        name: (type_name
          name: (ident))
        content: (object_content)))))

===========
Child types
===========

HeaderBar {
  [start]
  Label {
  }
}

---

(source_file
  (object
    name: (type_name
      name: (ident))
    content: (object_content
      (child_annotation
        child_type: (ident))
      (object
        name: (type_name
          name: (ident))
        content: (object_content)))))

=================
Internal children
=================

Dialog {
  [internal-child content_area]
  Box {
  }
}

---

(source_file
  (object
    name: (type_name
      name: (ident))
    content: (object_content
      (child_annotation
        (child_internal
	  name: (ident)))
      (object
        name: (type_name
          name: (ident))
        content: (object_content)))))

============================
Dialog and InfoBar responses
============================

Dialog {
  [action response=ok default]
  Button {}

  [action response=cancel]
  Button {}

  [action response=1]
  Button {}
}

---

(source_file
  (object
    name: (type_name
      name: (ident))
    content: (object_content
      (child_annotation
        (ext_response
          name: (ident)))
      (object
        name: (type_name
          name: (ident))
        content: (object_content))
      (child_annotation
        (ext_response
          name: (ident)))
      (object
        name: (type_name
          name: (ident))
        content: (object_content))
      (child_annotation
        (ext_response
          id: (integer_literal)))
      (object
        name: (type_name
          name: (ident))
        content: (object_content)))))

=================
Action type child
=================

Adw.ExpanderRow {
  [action]
  Label {
    label: "text";
  }
}

---

(source_file
  (object
    name: (type_name
      namespace: (ident)
      name: (ident))
    content: (object_content
      (child_annotation)
      (object
        name: (type_name
          name: (ident))
        content: (object_content
          (property
            name: (ident)
            value: (value
              (literal
                (quoted)))))))))
