test/corpus/template.txt
===============
With short name
===============

template Name {
}

---

(source_file
  (template
    name: (type_name
      name: (ident))
    content: (object_content)))

==================
With external name
==================

template $Name {
}

---

(source_file
  (template
    name: (type_name
      name: (ident))
    content: (object_content)))

========================
Subclass with short name
========================

template Name : Subclass {
}

---

(source_file
  (template
    name: (type_name
      name: (ident))
    subclass: (type_name
      name: (ident))
    content: (object_content)))

=======================
Subclass with full name
======================

template Name : Namespace.Name {
}

---

(source_file
  (template
    name: (type_name
      name: (ident))
    subclass: (type_name
      namespace: (ident)
      name: (ident))
    content: (object_content)))

====================
Legacy external type
====================

template .Name {
}

---

(source_file
  (template
    name: (type_name
      name: (ident))
    content: (object_content)))
